Bootstrap containers created for header and jumbotron

--- a/index.html
+++ b/index.html
@@ -18,9 +18,17 @@
     <title>Country and Destination Guide</title>
   </head>
   <body>
-	<!-- Main banner -->
-	<h1>&#9975 Country and Destination Guide &#127958</h1>
 	<!-- Main container -->
+    <div class="container">
+      <h1>&#9975 Country and Destination Guide &#127958</h1>
+  <!-- Jumbotron for Title -->
+      <div class="container-fluid" style="background-color: #20315A ; color: white;">
+        <div class="container-fluid py-5">
+          <img src="https://placehold.co/1200x550" class="img-fluid mx-auto d-block" alt="Responsive image">
+          </h1>
+        </div>
+      </div>
+    </div>
 	
 	</div>
 	<!-- Jquery -->
