--- a/index.html
+++ b/index.html
@@ -20,23 +20,22 @@
   <body>
 	<!-- Main container -->
     <div class="container">
-      <h1>&#9975 Country and Destination Guide &#127958</h1>
+      <header>
+        <h1>&#9975 Country and Destination Guide &#127958</h1>
+      </header>
   <!-- Jumbotron for Title -->
       <div class="container-fluid" style="background-color: #20315A ; color: white;">
         <div class="container-fluid py-5">
           <img src="https://placehold.co/1200x550" class="img-fluid mx-auto d-block" alt="Responsive image">
-          </h1>
         </div>
       </div>
     </div>
-	
-	</div>
 	<!-- Jquery -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"></script>
-	  	<!-- Link to javascript file -->
+	<!-- Link to javascript file -->
 		<script src="./js/script.js"></script>
   </body>
 </html>
