Basic site structure with bootstrap

--- a/index.html
+++ b/index.html
@@ -18,15 +18,76 @@
     <title>Country and Destination Guide</title>
   </head>
   <body>
-	<!-- Main container -->
-    <div class="container">
-      <header>
-        <h1>&#9975 Country and Destination Guide &#127958</h1>
-      </header>
+	<!-- Site container -->
+    <div class="container-md">
+  <!-- Header container -->
+      <div class="container-md">
+        <div class="row">
+          <div class="col">
+            <div class="header-box">
+            <header>
+              <h1 class="mb-2 mt-2">&#9975 Country and Destination Guide &#127958</h1>
+            </header>
+            </div>
+          </div>
+        </div>
+      </div>
   <!-- Jumbotron for Title -->
-      <div class="container-fluid" style="background-color: #20315A ; color: white;">
-        <div class="container-fluid py-5">
-          <img src="https://placehold.co/1200x550" class="img-fluid mx-auto d-block" alt="Responsive image">
+      <div class="container-md">
+        <div class="row">
+          <div class="col">
+            <div class="jumbo-box">
+              <img src="https://placehold.co/1000x450" class="img-fluid mx-auto d-block" alt="Placeholder image">
+            </div>
+          </div>
+        </div>
+      </div>
+  <!-- Main page content container-->
+      <div class="container-md">
+        <div class="row">
+          <!-- Column 1 - Search bar and previous searches -->
+          <div class="col-2 mt-2 mh-100">
+            <div class="box">
+              <div class="row">
+                <div class="col-12 mt-5">
+                  <div class="search-bar-box m-2">
+                  </div>
+                </div>
+                <div class="col-12 mt-5">
+                  <div class="m-2 previous-searches-box">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Column 2 - Main part of site -->
+          <div class="col-10 mt-2">
+            <div class="box">
+              <!-- Nested columns -->
+              <div class="row">
+                <div class="col-3 mt-5">
+                  <div class="mt-2 box1">
+                  </div>
+                </div>
+                <div class="col-3 mt-5">
+                  <div class="mt-2 box1">
+                  </div>
+                </div>
+                <div class="col-3 mt-5">
+                  <div class="mt-2 box1">
+                  </div>
+                </div>
+                <div class="col-3 mt-5">
+                  <div class="mt-2 box1">
+                  </div>
+                </div>
+                <div class="col-12 mt-5 mb-5">
+                  <div class="trip-advisor-box">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
