--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="row">
       <div class="col-12">
         <div class="search-box">
-          <label>Enter country search:</label>
+          <label><h5>Enter country search:</h5></label>
 					<div class="input-group mb-3">
 						<input type="text" class="form-control formInput" placeholder="Spain, France, Italy etc.">
 							<div class="input-group-append btnApp">
@@ -65,12 +65,8 @@
           <div class="col-2 mt-2 mh-100">
             <div class="box">
               <div class="row">
-                <!-- <div class="col-12 mt-5">
-                  <div class="search-bar-box m-2">
-                    
-                  </div>
-                </div> -->
-                <div class="col-12 mt-5">
+                <div class="col-12">
+                  <h5 class="text-center">Previous searches</h5>
                   <div class="m-2 previous-searches-box">
                   </div>
                 </div>
@@ -82,24 +78,92 @@
             <div class="box">
               <!-- Nested columns -->
               <div class="row">
-                <div class="col-3 mt-5">
-                  <div class="mt-2 box1">
+                <div class="col-3 mt-2">
+                  <div class="mt-2 ml-1 box1">
+                    <div class="card flag article-text-background">
+                      <br />
+                        <img
+                          class="card-img-top mx-auto"
+                          src="https://placehold.co/300x200/jpeg"
+                          alt="placeholder"
+                        />
+                      <div class="card-body">
+                        <h4 class="card-title">Flag</h4>
+                        <div class="card-text">
+                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, neque.
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
-                <div class="col-3 mt-5">
+                <div class="col-3 mt-2">
                   <div class="mt-2 box1">
+                    <div class="card country-name article-text-background">
+                      <br />
+                        <img
+                          class="card-img-top mx-auto"
+                          src="https://placehold.co/300x200/jpeg"
+                          alt="placeholder"
+                        />
+                      <div class="card-body">
+                        <h4 class="card-title">Common name and official name</h4>
+                        <div class="card-text">
+                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, neque.
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
-                <div class="col-3 mt-5">
+                <div class="col-3 mt-2">
                   <div class="mt-2 box1">
+                    <div class="card capital article-text-background">
+                      <br />
+                        <img
+                          class="card-img-top mx-auto"
+                          src="https://placehold.co/300x200/jpeg"
+                          alt="placeholder"
+                        />
+                      <div class="card-body">
+                        <h4 class="card-title">Capital city</h4>
+                        <div class="card-text">
+                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, neque.
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
-                <div class="col-3 mt-5">
-                  <div class="mt-2 box1">
+                <div class="col-3 mt-2">
+                  <div class="mt-2 mr-1 box1">
+                    <div class="card population article-text-background">
+                      <br />
+                        <img
+                          class="card-img-top mx-auto"
+                          src="https://placehold.co/300x200/jpeg"
+                          alt="placeholder"
+                        />
+                      <div class="card-body">
+                        <h4 class="card-title">Population</h4>
+                        <div class="card-text">
+                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, neque.
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
-                <div class="col-12 mt-5 mb-5">
-                  <div class="trip-advisor-box">
+                <div class="col-12 mt-2 mb-2">
+                  <div class="trip-advisor-box ml-1 mr-1">
+                    <div class="card article-text-background">
+                      <br />
+                      <div class="card-body">
+                        <h4 class="card-title">Tripadvisor</h4>
+                        <div class="card-text">
+                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium atque, nostrum veritatis delectus blanditiis quae 
+                          voluptates adipisci voluptatem autem quo doloribus quia quas aliquid velit at repellendus corporis, unde praesentium odit? 
+                          In quod voluptas asperiores illum labore, exercitationem cupiditate, nesciunt tempore, consectetur mollitia explicabo nostrum. 
+                          Voluptatum velit hic iure ipsa.
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
