Added logo, header and text to homepage

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300&display=swap" rel="stylesheet">
 	<!-- Bootstrap -->
     <link
       rel="stylesheet"
@@ -26,7 +29,8 @@
           <div class="col">
             <div class="header-box">
             <header>
-              <h1 class="mb-2 mt-2">&#9975 Country and Destination Guide &#127958</h1>
+              <img src="images/Country Guide Logo.png" class="float-left thumbnail img-fluid" alt="logo"> 
+              <!-- <h1 class="mb-2 mt-2">&#9975 Country and Destination Guide &#127958</h1> -->
             </header>
             </div>
           </div>
@@ -36,12 +40,14 @@
       <div class="container-md mb-2">
         <div class="row">
           <div class="col">
-            <div class="jumbo-box">
-              <img src="https://placehold.co/1000x450" class="img-fluid mx-auto d-block" alt="Placeholder image">
+            <div class="jumbo-box"> 
+              <h1 class="container centered mb-2 mt-2 w-50">Travel anywhere with the touch of a button using our free country guide...</h1>
+              <img src="images/Homepage Image (5).png" class="img-fluid mx-auto d-block w-100" alt="Placeholder image">
             </div>
           </div>
         </div>
       </div>
+
   <!-- Main page content container-->
       <div class="container-md">
         <div class="row">
