--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                       <br />
                         <img
                           class="card-img-top mx-auto"
-                          src="https://placehold.co/300x200/jpeg"
+                          src="images/Country Name.jpg"
                           alt="placeholder"
                         />
                       <div class="card-body">
@@ -120,7 +120,7 @@
                       <br />
                         <img
                           class="card-img-top mx-auto"
-                          src="https://placehold.co/300x200/jpeg"
+                          src="images/Capital City.jpg"
                           alt="placeholder"
                         />
                       <div class="card-body">
@@ -138,7 +138,7 @@
                       <br />
                         <img
                           class="card-img-top mx-auto"
-                          src="https://placehold.co/300x200/jpeg"
+                          src="images/Population.jpg"
                           alt="placeholder"
                         />
                       <div class="card-body">
