Added images for name, capital and population

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                       <br />
                         <img
                           class="card-img-top mx-auto"
-                          src="https://placehold.co/300x200/jpeg"
+                          src="images/Country Name.jpg"
                           alt="placeholder"
                         />
                       <div class="card-body">
@@ -126,7 +126,7 @@
                       <br />
                         <img
                           class="card-img-top mx-auto"
-                          src="https://placehold.co/300x200/jpeg"
+                          src="images/Capital City.jpg"
                           alt="placeholder"
                         />
                       <div class="card-body">
@@ -144,7 +144,7 @@
                       <br />
                         <img
                           class="card-img-top mx-auto"
-                          src="https://placehold.co/300x200/jpeg"
+                          src="images/Population.jpg"
                           alt="placeholder"
                         />
                       <div class="card-body">
