images and divs change

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="row">
           <div class="col">
             <div class="jumbo-box"> 
-              <h1 class="container centered mb-2 mt-2 w-50">Travel anywhere with the touch of a button using our free country guide...</h1>
+              <!-- <h1 class="container centered mb-2 mt-2 w-50">Travel anywhere with the touch of a button using our free country guide...</h1> -->
               <img src="images/Homepage Image (5).png" class="img-fluid mx-auto d-block w-100" alt="Placeholder image">
             </div>
           </div>
@@ -55,8 +55,9 @@
   <div class="container-md">
     <div class="row">
       <div class="col-12">
-        <div class="search-box">
-          <label><h5>Enter country search:</h5></label>
+        <div class="search-box text-center">
+          <!-- <label><h5>Enter country search:</h5></label> -->
+          <label><h3>Type the name of the country you want to learn about:</h3></label>
 					<div class="input-group mb-3">
 						<input type="text" class="form-control formInput" placeholder="Spain, France, Italy etc.">
 							<div class="input-group-append btnApp">
@@ -72,7 +73,7 @@
             <div class="box">
               <div class="row">
                 <div class="col-12">
-                  <h5 class="text-center">Previous searches</h5>
+                  <h4 class="text-center">Previous searches</h4>
                   <div class="m-2 previous-searches-box">
                   </div>
                 </div>
@@ -94,7 +95,7 @@
                           alt="placeholder"
                         />
                       <div class="card-body">
-                        <h4 class="card-title">Flag</h4>
+                        <h5 class="card-title">Flag</h5>
                         <div class="card-text">
                           Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, neque.
                         </div>
@@ -112,7 +113,7 @@
                           alt="placeholder"
                         />
                       <div class="card-body">
-                        <h4 class="card-title">Common name and official name</h4>
+                        <h5 class="card-title">Common name and official name</h5>
                         <div class="card-text">
                           Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, neque.
                         </div>
@@ -130,7 +131,7 @@
                           alt="placeholder"
                         />
                       <div class="card-body">
-                        <h4 class="card-title">Capital city</h4>
+                        <h5 class="card-title">Capital city</h5>
                         <div class="card-text">
                           Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, neque.
                         </div>
@@ -148,7 +149,7 @@
                           alt="placeholder"
                         />
                       <div class="card-body">
-                        <h4 class="card-title">Population</h4>
+                        <h5 class="card-title">Population</h5>
                         <div class="card-text">
                           Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, neque.
                         </div>
