Convert Link into Image

--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
                             <div class="mt-2 ml-1 box1">
                                 <div class="card flag article-text-background">
                                     <br />
-                                    <img
-                                            class="card-img-top mx-auto"
-                                            src="https://placehold.co/300x200/jpeg"
-                                            alt="placeholder"
+                                    <img id="flag-card-image"
+                                         class="card-img-top mx-auto"
+                                         src="https://placehold.co/300x200/jpeg"
+                                         alt="placeholder"
                                     />
                                     <div class="card-body">
                                         <h4 class="card-title">Flag</h4>
