--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
 
 <!-- Link to javascript file -->
-<script src="./js/script.js"></script>
+<script src="./js/script-new.js"></script>
 
 <!-- Link to the new modal.js file -->
 <script src="./js/modal.js"></script>
