--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
         <div class="row">
             <div class="col">
                 <div class="header-box">
-                    <header>
-                        <img src="images/Country Guide Logo.png" class="float-left thumbnail img-fluid" alt="logo">
-                        <!-- <h1 class="mb-2 mt-2">&#9975 Country and Destination Guide &#127958</h1> -->
-                    </header>
+                    <nav class="navbar navbar-expand-lg bg-body-tertiary customNav">
+                        <div class="container-fluid">
+                          <a class="navbar-brand" href="#"><img src="images/Country Guide Logo.png"></a>
+                        </div>
+                    </nav> 
                 </div>
             </div>
         </div>
@@ -61,7 +62,7 @@
                             <div class="input-group mb-3">
                                 <input type="text" id="mainInput" class="form-control formInput" placeholder="Spain, France, Italy etc.">
                                 <div class="input-group-append btnApp">
-                                    <button id="mainSearchButton" class="btn btn-warning btn-outline-dark search" type="button">
+                                    <button id="mainSearchButton" class="btn btn-info btn-outline-info search" type="button">
                                         <i class="fas fa-search"></i>
                                     </button>
                                 </div>
