Media queries edit

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300&display=swap" rel="stylesheet">
+    <meta name=viewport content="width=device-width, initial-scale=1, user-scalable=yes">
     <!-- Bootstrap -->
     <link
             rel="stylesheet"
@@ -71,7 +72,7 @@
                 </div>
             </div>
             <!-- Column 1 - Previous searches -->
-            <div class="col-2 mt-2 mh-100">
+            <div class="container-fluid searches-box mt-2 col-md-12">
                 <div class="box">
                     <div class="row">
                         <div class="col-12">
@@ -83,11 +84,11 @@
                 </div>
             </div>
             <!-- Column 2 - Main part of site -->
-            <div class="col-10 mt-2">
+            <div class="col-md-10 mt-2 col-sm-12">
                 <div class="box">
                     <!-- Nested columns -->
                     <div class="row">
-                        <div class="col-3 mt-2">
+                      <div class="col-12 mt-2 col-md-3">
                             <div class="mt-2 ml-1 box1">
                                 <div class="card flag article-text-background">
                                     <br />
@@ -105,7 +106,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-3 mt-2">
+                        <div class="col-12 mt-2 col-md-3">
                             <div class="mt-2 box1">
                                 <div class="card country-name article-text-background">
                                     <br />
@@ -122,7 +123,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-3 mt-2">
+                        <!-- <div class="col-3 mt-2"> -->
+                          <div class="col-12 mt-2 col-md-3">
                             <div class="mt-2 box1">
                                 <div class="card capital article-text-background">
                                     <br />
@@ -140,7 +142,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-3 mt-2">
+                        <div class="col-12 mt-2 col-md-3">
                             <div class="mt-2 mr-1 box1">
                                 <div class="card population article-text-background">
                                     <br />
